# centerpoint-livox

./: CMakeLists.txt  README.md  package.xml
cfgs/: centerpoint.yaml  centerpoint_boolmap_0.2.yaml
data/: boxes.txt
include/: centerpoint.h  common.h  iou3d_nms.h  logger.h  postprocess.h  preprocess.h  process.h
include/app/: detection.h
include/plugin/: Atan2.h  Atan2Kernel.h  Fmod.h  Mod.h
model/: modified_infered_rpn_sim.onnx.cache
src/: centerpoint.cpp  iou3d_nms.cu  postprocess.cu  preprocess.cu  process.cpp
src/app/: detection.cpp  main.cpp
src/plugin/: Atan2.cpp  Atan2Kernel.cu  Fmod.cpp  Mod.cu
